# sphinx_example

./: .buildinfo  README.rst  api.html  examplenb.html  genindex.html  index.html  objects.inv  other.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  sphinx_example.py  test_plus.py
_autosummary/: sphinx_example.html  sphinx_example.plus.html  sphinx_example.times.html
_modules/: index.html  sphinx_example.html
_sources/: other.rst
_sources/_autosummary/: sphinx_example.plus.rst  sphinx_example.rst  sphinx_example.times.rst
docs/source/: api.rst  conf.py  examplenb.ipynb  index.rst
