[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Denis Rosset <physics@denisrosset.com>"] 
description = "Small Poetry project with documentation" 
license = "MIT" 
name = "sphinx_example" 
readme = "README.rst" 
repository = "https://github.com/denisrosset/sphinx_example.git" 
version = "0.0.1" # update in sphinx_example.py as well

[tool.poetry.dependencies]
python = "^3.8"

ipython = "^8.1.1"
jupyterlab = "^3.3.2"
myst-nb = "^0.13.2"
sphinx = "4.3.2"
sphinx-autodoc-typehints = "^1.17.0"
sphinx-book-theme = "^0.2.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
doc8 = "^0.10.1"
esbonio = "^0.10.2"
isort = "^5.10.1"
mypy = "^0.941"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
rstcheck = "^3.3.1"

[tool.mypy]
python_version = "3.8"

[tool.black]
line-length = 99
target_version = ['py38']

[tool.doc8]
max-line-length = 99

[tool.isort]
line_length = 99
profile = "black"
py_version = 38
